--- a/front/index.html
+++ b/front/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WinRate - Star Wars Unlimited</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" href="https://fonts.cdnfonts.com/css/sf-distant-galaxy">
 </head>
 <body>
     <header class="header">
