Update deck section

--- a/front/index.html
+++ b/front/index.html
@@ -31,7 +31,7 @@
             </form>
         </section>
 
-        <section id="deckSection" class="hidden">
+        <!-- <section id="deckSection" class="hidden">
             <h3>Create deckSection</h3>
             <form id="deckForm">
                 <input type="text" id="deckName" placeholder="Deck Name" required>
@@ -47,7 +47,7 @@
                 <button type="submit"> Update WinRate</button>
             </form>
         </section>
-    </main>
+    </main> -->
 
     <footer>
         <p>May the Force be with you - WinRate, a Star Wars themed platform</p>
