Correção de Erros 27/11

--- a/front/decks.html
+++ b/front/decks.html
@@ -15,13 +15,13 @@
     <main>
         <section class="deck-section">
             <h3>Create a New Deck</h3>
-            <form id="deckForm">
+            <form class="form-style" id="deckForm">
                 <input type="text" id="deckName" placeholder="Deck Name" required>
                 <button type="submit">Create Deck</button>
             </form>
         </section>
 
-        <section class="winrate-section">
+        <section class="form-style winrate-section">
             <h3>Update Win/Loss Rate</h3>
             <form id="winrateForm">
                 <input type="text" id="userDeck" placeholder="Your Deck" required>
@@ -34,7 +34,7 @@
 
         <section class="stats-section">
             <h3>Your Deck Stats</h3>
-            <table id="deckStatsTable">
+            <table class="deckStatsTable">
                 <thead>
                     <tr>
                         <th>Your Deck</th>
